--- a/index.html
+++ b/index.html
@@ -501,7 +501,7 @@
 
       </a>
     </div>
-    <div style="position: relative;display: flex; flex-direction: row; align-items: center;" class="header__content__links">
+    <!-- <div style="position: relative;display: flex; flex-direction: row; align-items: center;" class="header__content__links">
 
       <a href=https://databay.solutions/index.html target="_blank">
         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="20" viewBox="0 0 24 20" fill="none">
@@ -513,7 +513,7 @@
      <span style="position: relative; bottom: 6px;">https://databay.solutions/index.html</span>
 
       </a>
-    </div>
+    </div> -->
   
     <div style="position: relative;display: flex; flex-direction: row; align-items: center;" class="header__content__links">
         <a href=https://manfredexport.com/ target="_blank">
@@ -723,7 +723,7 @@
             <ul>
                 <li>
       I had the role of Full Stack developer, using several projects using a wide range of technologies. On the client side, implemented dynamic and efficient interfaces using Vue and Nuxt, JavaScript and TypeScript for frontend logic. For the layout and styles, I used CSS and the Ant Design (AntD) component library, providing an attractive visual experience.
-On the server side, I built services with Node.js, using the Sequelize framework to interact with MySQL databases. This integration ensured efficient data management and a scalable architecture. I worked in collaboration with the development team
+On the server side, I built services with Node.js, using the Sequelize framework to interact with MySQL databases. This integration ensured efficient data management and a scalable architecture. I worked in collaboration with the development team.
    </li>
             </ul>
         </div>
@@ -817,7 +817,7 @@ On the server side, I built services with Node.js, using the Sequelize framework
         </div>
         <div class="main__section__data">
           <p>
-In this Bootcamp I will cover cloud technologies and providers such as: NodeJS, Express, Mongoose, Mongo, GraphQL, .net, Entity Framework, SQL Server, TypeScript, C#, Heroku, Amazon, Azure
+In this Bootcamp I will cover cloud technologies and providers such as: NodeJS, Express, Mongoose, Mongo, GraphQL, .net, Entity Framework, SQL Server, TypeScript, C#, Heroku, Amazon, Azure.
           </p>    
             </div>
           <h3 class="tech__tools__heading">Technologies and Tools</h3>
