change text description

--- a/index.html
+++ b/index.html
@@ -540,11 +540,16 @@
       </svg>
       <h2>About me</h2>
     </div>
-    <p>
-  Full stack developer with Front-end experience working on projects with Vue + Nuxt.js, as well as React and Vanilla JavaScript. On the Back-end, I have used Node.js, Sequelize and MySQL. My training includes a web development bootcamp and a second specialized program to acquire a solid foundation in frameworks and programming languages, culminating with a Master in Front-end. Currently, I am studying a specialization in Back-end that has prepared me to work on projects.
-     <br>
-  I speak fluently in Italian and Spanish, and I speak English well, as I use it regularly in the work environment.
-</p>
+     <p>
+   I'm Full stack developer with Front-end experience working on projects with Vue + Nuxt.js, React, Vanilla JavaScript, HTML and CSS. Additionally, I have executed tests on websites.
+    <br> <br>
+    On the Back-end, I have experience with Node.js, Sequelize and MySQL; I have created applications from scratch using MySQL and Node.js on the backend side.
+
+    <br> <br>
+     My training includes a web development bootcamp and a second specialized program to acquire a solid foundation in frameworks and programming languages, culminating with a Master in Front-end. Currently, I am studying a specialization in Back-end that prepares me to work on projects.
+   <br> <br>
+   I speak fluently in Italian and Spanish, and I speak English well, as I use it regularly in the work environment.
+  </p>
   </section>
 
           <section class="main__section">
@@ -722,9 +727,8 @@
         <div class="main__section__data">
             <ul>
                 <li>
-      I had the role of Full Stack developer, using several projects using a wide range of technologies. On the client side, implemented dynamic and efficient interfaces using Vue and Nuxt, JavaScript and TypeScript for frontend logic. For the layout and styles, I used CSS and the Ant Design (AntD) component library, providing an attractive visual experience.
-On the server side, I built services with Node.js, using the Sequelize framework to interact with MySQL databases. This integration ensured efficient data management and a scalable architecture. I worked in collaboration with the development team.
-   </li>
+      I had the role of Full Stack developer, using several projects using a wide range of technologies. On the client side, implemented dynamic and efficient interfaces using Vue and Nuxt, JavaScript and TypeScript for frontend logic. For the layout and styles, I worked with CSS and the Ant Design (AntD) component library, providing an attractive visual experience. On the server side, I built services with Node.js, using the Sequelize framework to interact with MySQL databases. This integration ensured efficient data management and a scalable architecture. I worked in collaboration with the development team.
+                </li>
             </ul>
         </div>
           <a href="https://databay.solutions/index.html" target="_blank">Databay Solution</a>
