change space text

--- a/index.html
+++ b/index.html
@@ -726,12 +726,18 @@
         </div>
         <div class="main__section__data">
             <ul>
-                <li>
-      I had the role of Full Stack developer, using several projects using a wide range of technologies. On the client side, implemented dynamic and efficient interfaces using Vue and Nuxt, JavaScript and TypeScript for frontend logic. For the layout and styles, I worked with CSS and the Ant Design (AntD) component library, providing an attractive visual experience. On the server side, I built services with Node.js, using the Sequelize framework to interact with MySQL databases. This integration ensured efficient data management and a scalable architecture. I worked in collaboration with the development team.
-                </li>
+               <p>
+   I'm Full stack developer with Front-end experience working on projects with Vue + Nuxt.js, React, Vanilla JavaScript, HTML and CSS. Additionally, I have executed tests on websites.
+    <br> <br>
+    On the Back-end, I have experience with Node.js, Sequelize and MySQL; I have created applications from scratch using MySQL and Node.js on the backend side.
+
+    <br> <br>
+     My training includes a web development bootcamp and a second specialized program to acquire a solid foundation in frameworks and programming languages, culminating with a Master in Front-end. Currently, I am studying a specialization in Back-end that prepares me to work on projects.
+   <br> <br>
+   I speak fluently in Italian and Spanish, and I speak English well, as I use it regularly in the work environment.
+  </p>
             </ul>
         </div>
-          <a href="https://databay.solutions/index.html" target="_blank">Databay Solution</a>
           <h3 class="tech__tools__heading">Technologies and Tools</h3>
           <ul class="ul__technologies">
               <li class="li__technologies">CSS</li>
@@ -772,12 +778,20 @@
         </div>
         <div class="main__section__data">
             <ul>
-                <li>
-    Developed practical frontend skills by creating complete web pages using the React framework. During these internships, I implemented the Emotion layout library to achieve an efficient and scalable design. This approach allowed me to build modern web interfaces, optimizing the user experience and applying best practices in frontend development with React and Emotion.
-                </li>
+                 <li style="list-style-type: none;">
+              I had the role of Full Stack developer, in several projects using a wide range of technologies. On the client side, implemented dynamic
+               and efficient interfaces using Vue and Nuxt, JavaScript and TypeScript. 
+               <br> <br>
+               For the layout and styles, I worked with CSS
+                and the Ant Design (AntD) component library, providing an attractive visual experience. On the server side, I built services with Nodejs,
+                 using the Sequelize framework to interact with MySQL databases. 
+                 <br> <br>
+                 This integration ensured efficient data management and a scalable architecture.
+                  I worked in collaboration with the development team.          
+
+   </li>
             </ul>
         </div>
-          <a href="https://www.manfredexport.com/" target="_blank">Lemoncode</a>
           <h3 class="tech__tools__heading">Technologies and Tools</h3>
           <ul class="ul__technologies">
               <li class="li__technologies">CSS</li>
