change gap competencies

--- a/index.html
+++ b/index.html
@@ -687,14 +687,14 @@
     </ul>
   </section>
 
-          <section class="main__section">
+          <section class="main__section" style="gap:15px;">
     <div class="main__section__header">
       <svg xmlns="http://www.w3.org/2000/svg" width="32" height="6" viewBox="0 0 32 6" fill="none">
         <path d="M5.51343e-07 3L32 3" stroke="#3BA0B7" stroke-width="6" />
       </svg>
       <h2>Competencies</h2>
     </div>
-    <ul class="main__section__skills__ul">
+    <ul class="main__section__skills__ul" style="gap:10px">
         <li class="main__section__skills__li">Continuous learning</li>
         <li class="main__section__skills__li">Written communication</li>
         <li class="main__section__skills__li">Creative thinking</li>
